[package]
name = "debris-wasm-test"
version = "0.1.0"
authors = ["Inky-developer <developerinky@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
# wee_alloc = "0.4"
# no default features to disable color output
debris-lang = {git="https://github.com/Inky-developer/debris", default_features=false}
serde_json = "1"
alphanumeric-sort = "1.4"
datapack_vm = { git = "https://github.com/SuperTails/datapackvm.git" }
datapack_common = { git = "https://github.com/SuperTails/datapack_common.git" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# not much point in optimizing for size, as that only saves ~100kb
opt-level = 3
lto = true
codegen-units = 1